# LANOT_ceniza

./: .gitignore  .zenodo.json  AUTHORS.md  CITATION.cff  Codigo Completo.py  README.md  analize_ash.py  ash.cpt  detect_ash.py  detect_ashv0.py  detect_ashv2.py  m19_ceniza_new.sh  main.py  mapdrawer.py  paper.md  pyproject.toml  references.bib  requirements.txt  setup.py  test_main.py
lanot_ceniza/: __init__.py  _bridge_detect_ash.py  _bridge_mapdrawer.py  compare_ash.py  detect_ash.py
